--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,45 +6,34 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-  - &id003
-    name: 🇺🇸_US_美国_3
+    name: 🇳🇱_NL_荷兰->🇫🇷_FR_法国
     type: vmess
-    server: v2ray.ibgfw.top
-    port: 2053
+    server: eu-2.0rd.net
+    port: 80
     cipher: auto
-    uuid: 5a5aadc2-8834-4e7b-895b-74ad155fbf24
+    uuid: ee80a700-9295-11ee-b833-205c6d5f5d78
     alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: teams.microsoft.com
+    network: ws
+    ws-opts:
+      path: /7tx2lbmf
+  - &id002
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 23c6afc3-f.3nvx.com
+    port: 443
+    cipher: auto
+    uuid: 74dd674d-35fa-4f75-8b05-0f276e15c091
+    alterId: 1
     tls: true
     skip-cert-verify: true
-    servername: v2ray.ibgfw.top
     network: ws
     ws-opts:
-      path: /vVNUJOgb/
-  - &id004
-    name: 🇸🇪_SE_瑞典
+      path: /assets
+  - &id003
+    name: 🇸🇪_SE_瑞典_1
     type: vmess
     server: 94.131.98.90
     port: 80
@@ -56,137 +45,31 @@ proxies:
     network: ws
     ws-opts:
       path: /vmess
+  - &id004
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 141.11.211.17
+    port: 32615
+    cipher: auto
+    uuid: 28b0fbe9-3712-4daa-e52c-55f2f59841e9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
   - &id005
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 95.164.46.154
-    port: 8080
-    cipher: auto
-    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id006
     name: 🇫🇷_FR_法国_1
-    type: vmess
-    server: s1.19kala.co
-    port: 443
-    cipher: auto
-    uuid: 5775de7e-0c2e-4e7c-8b9c-c48704d8facb
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: s1.19kala.co
-    network: ws
-    ws-opts:
-      path: /OWTu4RMkF9V12oO5NLlQk
-      headers:
-        host: s1.19kala.co
-  - &id007
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 198.244.231.34
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: fr-01.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 5d3e67f9-b611-4076-9136-cc64fd234806
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fr-01.jikuai.xyz
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 34.209.235.189
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 198.244.228.191
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇫🇷_FR_法国_2
     type: ss
     server: 57.129.1.21
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id012
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 57.129.1.20
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 162.19.59.163
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 146.59.111.182
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇫🇷_FR_法国_6
-    type: ss
-    server: 135.125.172.153
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇫🇷_FR_法国_7
+  - &id006
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
-    server: 57.129.7.139
-    port: 60240
-    cipher: auto
-    uuid: 84e92b93-93d0-40e4-8b2b-123801eeda44
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: 89.221.224.12
+    server: 162.159.142.243
     port: 80
     cipher: auto
-    uuid: 3bc3514c-cbcb-4b08-9797-c62850ae8bb4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id018
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: us-02.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -194,11 +77,228 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: us-02.jikuai.xyz
-  - &id019
-    name: 🇭🇰_HK_香港
+        host: uk3.889611.com
+  - &id007
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
-    server: cm3.xn-w1yu8o.xyz
+    server: 162.159.142.241
+    port: 80
+    cipher: auto
+    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: uk3.889611.com
+  - &id008
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
+    type: vmess
+    server: 162.159.142.244
+    port: 80
+    cipher: auto
+    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: uk3.889611.com
+  - &id009
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 93.123.17.132
+    port: 443
+    cipher: auto
+    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /MEHDI
+      headers:
+        host: teletv.onthewifi.com
+  - &id010
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: cp2.colacloud.site
+    port: 80
+    cipher: auto
+    uuid: 7d4c1cc0-1382-4fd1-915b-362c59e77ad6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /sssddd
+      headers:
+        host: cf-bxs.colacloud.site
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cp1.colacloud.site
+    port: 2086
+    cipher: auto
+    uuid: 7d4c1cc0-1382-4fd1-915b-362c59e77ad6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /sssddd
+      headers:
+        host: cf-tr.colacloud.site
+  - &id012
+    name: 🇬🇹_GT_危地马拉->🇳🇱_NL_荷兰
+    type: vmess
+    server: 181.174.80.182
+    port: 443
+    cipher: auto
+    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /MEHDI
+      headers:
+        host: teletv.onthewifi.com
+  - &id013
+    name: 🇵🇱_PL_波兰
+    type: vmess
+    server: 92.223.92.24
+    port: 443
+    cipher: auto
+    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /MEHDI
+      headers:
+        host: teletv.onthewifi.com
+  - &id014
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_4
+    type: vmess
+    server: 162.159.142.245
+    port: 80
+    cipher: auto
+    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: uk3.889611.com
+  - &id015
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 162.159.142.201
+    port: 80
+    cipher: auto
+    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id016
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 162.159.142.203
+    port: 80
+    cipher: auto
+    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id017
+    name: 🇩🇪_DE_德国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 92.223.124.31
+    port: 443
+    cipher: auto
+    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /MEHDI
+      headers:
+        host: teletv.onthewifi.com
+  - &id018
+    name: 🇸🇪_SE_瑞典_2
+    type: vmess
+    server: 80.240.113.13
+    port: 443
+    cipher: auto
+    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /MEHDI
+      headers:
+        host: teletv.onthewifi.com
+  - &id019
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_5
+    type: vmess
+    server: 162.159.142.242
+    port: 80
+    cipher: auto
+    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: uk3.889611.com
+  - &id020
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 162.19.59.163
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id021
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_3
+    type: vmess
+    server: 162.159.142.204
+    port: 80
+    cipher: auto
+    uuid: 3091067b-9bce-4e1f-9f77-a41daff54268
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id022
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: cfzl2.freeapp.buzz
     port: 80
     cipher: auto
     uuid: e759eadc-8e71-47b0-874e-871e3d8dc31e
@@ -210,8 +310,30 @@ proxies:
       path: /
       headers:
         host: icu3.mac2win.top
-  - &id020
-    name: 🇸🇰_SK_斯洛伐克
+  - &id023
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 54.36.174.181
+    port: 6379
+    password: zDNVedRFPQexG9v
+    cipher: aes-256-gcm
+  - &id024
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: cfzl1.freeapp.buzz
+    port: 8080
+    cipher: auto
+    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu2.mac2win.top
+  - &id025
+    name: 🇸🇰_SK_斯洛伐克_1
     type: vmess
     server: sk1-vmess.sshmax.xyz
     port: 80
@@ -225,7 +347,77 @@ proxies:
       path: /vmess
       headers:
         host: sk1-vmess.sshmax.xyz
-  - &id021
+  - &id026
+    name: 🇭🇰_HK_香港->🇮🇳_IN_印度
+    type: vmess
+    server: cm3.xn-w1yu8o.xyz
+    port: 80
+    cipher: auto
+    uuid: e759eadc-8e71-47b0-874e-871e3d8dc31e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu3.mac2win.top
+  - &id027
+    name: 🇬🇧_GB_英国
+    type: vmess
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+  - &id028
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 54.36.174.181
+    port: 8090
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id029
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 135.125.172.153
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id030
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 94.131.14.177
+    port: 80
+    cipher: auto
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: lt2-vmess.sshmax.xyz
+  - &id031
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 89.221.224.12
+    port: 80
+    cipher: auto
+    uuid: 3bc3514c-cbcb-4b08-9797-c62850ae8bb4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id032
     name: 🇮🇳_IN_印度
     type: vmess
     server: 103.113.68.233
@@ -238,53 +430,45 @@ proxies:
     network: ws
     ws-opts:
       path: /vmess
-      headers:
-        host: 103.113.68.233
-  - &id022
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+  - &id033
+    name: 🇸🇰_SK_斯洛伐克_2
     type: vmess
-    server: cm1.xn-w1yu8o.xyz
+    server: 5.252.23.133
     port: 80
     cipher: auto
-    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu2.mac2win.top
-  - &id023
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: is2.xv2ray.net
-    port: 80
-    cipher: auto
-    uuid: 3f9461ac-51dc-4114-988f-f65f7260edf7
+    uuid: 34b71805-2692-45e4-861d-0818954940e2
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /vmess
-      headers:
-        host: is2.xv2ray.net
-  - &id024
-    name: 🇳🇱_NL_荷兰
+  - &id034
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 188.114.96.2
-    port: 443
+    server: c.mac2win.top
+    port: 8080
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 1
-    tls: true
+    uuid: ba1aa9ae-3cad-46a5-8dfa-b0973c35abeb
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: linkvws
+      path: /argox-vm?ed=2048
       headers:
-        host: ophelia.mom
+        host: acquire-cleaners-camel-terror.trycloudflare.com
+  - &id035
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: vmess
+    server: 142.171.8.13
+    port: 20007
+    cipher: auto
+    uuid: 20d790b7-e59e-4f8d-e1a5-e3938f293a89
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -335,6 +519,17 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -364,6 +559,17 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
   - name: SELECT
     type: select
     proxies:
@@ -391,6 +597,17 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
