--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,324 +6,67 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-    type: vmess
-    server: eu-2.0rd.net
-    port: 80
-    cipher: auto
-    uuid: ee80a700-9295-11ee-b833-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: teams.microsoft.com
-    network: ws
-    ws-opts:
-      path: /7tx2lbmf
-  - &id002
     name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 23c6afc3-f.3nvx.com
+    type: trojan
+    server: 167.68.5.183
     port: 443
-    cipher: auto
-    uuid: 74dd674d-35fa-4f75-8b05-0f276e15c091
-    alterId: 1
-    tls: true
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: 6us3.pqjc.buzz
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /assets
+      path: /pq/us3
+  - &id002
+    name: 🇬🇧_GB_英国
+    type: ss
+    server: 198.244.231.34
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id003
-    name: 🇸🇪_SE_瑞典_1
-    type: vmess
-    server: 94.131.98.90
-    port: 80
-    cipher: auto
-    uuid: 0814badf-f3fc-4f15-b400-4ae8cdce610e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 141.11.211.17
-    port: 32615
-    cipher: auto
-    uuid: 28b0fbe9-3712-4daa-e52c-55f2f59841e9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id005
     name: 🇫🇷_FR_法国_1
     type: ss
     server: 57.129.1.21
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: 162.159.142.243
-    port: 80
-    cipher: auto
-    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id007
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: 162.159.142.241
-    port: 80
-    cipher: auto
-    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id008
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
-    type: vmess
-    server: 162.159.142.244
-    port: 80
-    cipher: auto
-    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id009
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 93.123.17.132
-    port: 443
-    cipher: auto
-    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /MEHDI
-      headers:
-        host: teletv.onthewifi.com
-  - &id010
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: cp2.colacloud.site
-    port: 80
-    cipher: auto
-    uuid: 7d4c1cc0-1382-4fd1-915b-362c59e77ad6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /sssddd
-      headers:
-        host: cf-bxs.colacloud.site
-  - &id011
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: cp1.colacloud.site
-    port: 2086
-    cipher: auto
-    uuid: 7d4c1cc0-1382-4fd1-915b-362c59e77ad6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /sssddd
-      headers:
-        host: cf-tr.colacloud.site
-  - &id012
-    name: 🇬🇹_GT_危地马拉->🇳🇱_NL_荷兰
-    type: vmess
-    server: 181.174.80.182
-    port: 443
-    cipher: auto
-    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /MEHDI
-      headers:
-        host: teletv.onthewifi.com
-  - &id013
-    name: 🇵🇱_PL_波兰
-    type: vmess
-    server: 92.223.92.24
-    port: 443
-    cipher: auto
-    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /MEHDI
-      headers:
-        host: teletv.onthewifi.com
-  - &id014
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_4
-    type: vmess
-    server: 162.159.142.245
-    port: 80
-    cipher: auto
-    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id015
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: 162.159.142.201
-    port: 80
-    cipher: auto
-    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id016
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 162.159.142.203
-    port: 80
-    cipher: auto
-    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id017
-    name: 🇩🇪_DE_德国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 92.223.124.31
-    port: 443
-    cipher: auto
-    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /MEHDI
-      headers:
-        host: teletv.onthewifi.com
-  - &id018
-    name: 🇸🇪_SE_瑞典_2
-    type: vmess
-    server: 80.240.113.13
-    port: 443
-    cipher: auto
-    uuid: 71617e43-2715-4f7c-8db3-a5c854e2f188
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /MEHDI
-      headers:
-        host: teletv.onthewifi.com
-  - &id019
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_5
-    type: vmess
-    server: 162.159.142.242
-    port: 80
-    cipher: auto
-    uuid: c0b72149-1064-400f-acb4-ec9fa76c78aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: uk3.889611.com
-  - &id020
+  - &id004
     name: 🇫🇷_FR_法国_2
     type: ss
-    server: 162.19.59.163
+    server: 57.129.1.22
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id021
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_3
+  - &id005
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 162.159.142.204
+    server: 94.131.117.159
     port: 80
     cipher: auto
-    uuid: 3091067b-9bce-4e1f-9f77-a41daff54268
+    uuid: 72b3b89a-30c5-4dc7-8b6e-f61218b95eda
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /vmess
       headers:
-        host: er3.889611.com
-  - &id022
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
-    type: vmess
-    server: cfzl2.freeapp.buzz
-    port: 80
-    cipher: auto
-    uuid: e759eadc-8e71-47b0-874e-871e3d8dc31e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu3.mac2win.top
-  - &id023
-    name: 🇫🇷_FR_法国_3
+        host: 94.131.117.159
+  - &id006
+    name: 🇺🇸_US_美国_3
     type: ss
-    server: 54.36.174.181
-    port: 6379
-    password: zDNVedRFPQexG9v
-    cipher: aes-256-gcm
-  - &id024
-    name: 🇺🇸_US_美国_4
+    server: 89.187.181.179
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id007
+    name: 🇺🇸_US_美国->🇱🇹_LT_立陶宛
     type: vmess
-    server: cfzl1.freeapp.buzz
+    server: moon.chanell.mci.v-x4ssd.space
     port: 8080
     cipher: auto
-    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
+    uuid: 97bba5ca-185c-4e6a-ac64-96e920d4eeda
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -331,8 +74,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: icu2.mac2win.top
-  - &id025
+        host: moon.chanell.mci.v-x4ssd.space
+  - &id008
     name: 🇸🇰_SK_斯洛伐克_1
     type: vmess
     server: sk1-vmess.sshmax.xyz
@@ -347,90 +90,7 @@ proxies:
       path: /vmess
       headers:
         host: sk1-vmess.sshmax.xyz
-  - &id026
-    name: 🇭🇰_HK_香港->🇮🇳_IN_印度
-    type: vmess
-    server: cm3.xn-w1yu8o.xyz
-    port: 80
-    cipher: auto
-    uuid: e759eadc-8e71-47b0-874e-871e3d8dc31e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu3.mac2win.top
-  - &id027
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id028
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 54.36.174.181
-    port: 8090
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id029
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 135.125.172.153
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id030
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 94.131.14.177
-    port: 80
-    cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: lt2-vmess.sshmax.xyz
-  - &id031
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 89.221.224.12
-    port: 80
-    cipher: auto
-    uuid: 3bc3514c-cbcb-4b08-9797-c62850ae8bb4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id032
-    name: 🇮🇳_IN_印度
-    type: vmess
-    server: 103.113.68.233
-    port: 80
-    cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id033
+  - &id009
     name: 🇸🇰_SK_斯洛伐克_2
     type: vmess
     server: 5.252.23.133
@@ -443,8 +103,229 @@ proxies:
     network: ws
     ws-opts:
       path: /vmess
-  - &id034
+  - &id010
+    name: 🇷🇸_RS_塞尔维亚
+    type: vmess
+    server: 45.89.55.147
+    port: 80
+    cipher: auto
+    uuid: 4c2dbe94-833b-476c-910b-af8b5f3c0123
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id011
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: baystateparent.com
+    port: 80
+    cipher: auto
+    uuid: 417df789-074f-4d97-b00d-83b266c3724b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /cctv13/hd.m3u8
+      headers:
+        host: nihaoyaus11.com
+  - &id012
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 2876be99-f.3nvx.com
+    port: 443
+    cipher: auto
+    uuid: 74dd674d-35fa-4f75-8b05-0f276e15c091
+    alterId: 1
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /assets
+      headers:
+        host: 2876be99-f.3nvx.com
+  - &id013
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: polouk.yj2022.gq
+    port: 8080
+    cipher: auto
+    uuid: 4b5e4565-322f-4223-a891-78a84f189726
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /r8ykwif5rffiqJeJ49zLka7PbhWz3wiHs8cSeiRyZL
+      headers:
+        host: polouk.yj2022.gq
+  - &id014
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    type: trojan
+    server: 02cabca.bhaquh.xyz
+    port: 20696
+    udp: true
+    password: b2f62b6b-1b03-4d35-9026-524525dedbad
+    sni: v1-dy.ixigua.com
+    skip-cert-verify: true
+    network: tcp
+  - &id015
     name: 🇺🇸_US_美国_6
+    type: ss
+    server: us.fanqiecloud.top
+    port: 22752
+    password: 389d5e95-61a5-4633-a127-f279a75b1fca
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 135.125.172.153
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id017
+    name: 🇩🇪_DE_德国
+    type: ss
+    server: de.fanqiecloud.top
+    port: 22302
+    password: 389d5e95-61a5-4633-a127-f279a75b1fca
+    cipher: chacha20-ietf-poly1305
+  - &id018
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: us.colacloud.site
+    port: 24652
+    password: 097418b3-a07a-4747-bae6-b5142ee39a19
+    cipher: chacha20-ietf-poly1305
+  - &id019
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: ss
+    server: 91.194.161.7
+    port: 8388
+    password: OWJlYjYy
+    cipher: chacha20-ietf-poly1305
+  - &id020
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 64.31.55.5
+    port: 11223
+    password: dongtaiwang.com
+    cipher: aes-256-gcm
+  - &id021
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 185.231.205.80
+    port: 1443
+    password: MGQwNTgw
+    cipher: chacha20-ietf-poly1305
+  - &id022
+    name: 🇯🇵_JP_日本->🇺🇸_US_美国
+    type: vmess
+    server: dir01.netorigins2u.site
+    port: 30501
+    cipher: auto
+    uuid: 922eeb53-8f01-3d66-8b5d-02052a5fd392
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us01.tomoony.xyz
+  - &id023
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 193.203.203.88
+    port: 2082
+    cipher: auto
+    uuid: 2ec862af-bd1c-46f5-97af-bffbe61e3164
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id024
+    name: 🇺🇸_US_美国_9
+    type: trojan
+    server: us2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: e498c261-cabb-4b2c-810b-995d0bd8d049
+    sni: 206.237.5.220
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇦🇺_AU_澳大利亚
+    type: ss
+    server: au.colacloud.site
+    port: 20262
+    password: 097418b3-a07a-4747-bae6-b5142ee39a19
+    cipher: chacha20-ietf-poly1305
+  - &id026
+    name: 🇳🇱_NL_荷兰
+    type: ss
+    server: 5.181.21.19
+    port: 8388
+    password: Njk2Nzcy
+    cipher: chacha20-ietf-poly1305
+  - &id027
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 95.164.46.154
+    port: 8080
+    cipher: auto
+    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id028
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 167.82.86.194
+    port: 80
+    cipher: auto
+    uuid: 417df789-074f-4d97-b00d-83b266c3724b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /cctv13/hd.m3u8
+      headers:
+        host: nihaoyaus3.com
+  - &id029
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: cfzl2.freeapp.buzz
+    port: 8080
+    cipher: auto
+    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu2.mac2win.top
+  - &id030
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+    type: vmess
+    server: nice2.xn-w1yu8o.xyz
+    port: 80
+    cipher: auto
+    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu2.mac2win.top
+  - &id031
+    name: 🇺🇸_US_美国_13
     type: vmess
     server: c.mac2win.top
     port: 8080
@@ -458,17 +339,49 @@ proxies:
       path: /argox-vm?ed=2048
       headers:
         host: acquire-cleaners-camel-terror.trycloudflare.com
-  - &id035
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+  - &id032
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
-    server: 142.171.8.13
-    port: 20007
+    server: mm3.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 20d790b7-e59e-4f8d-e1a5-e3938f293a89
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id033
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 94.131.14.177
+    port: 80
+    cipher: auto
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id034
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -529,7 +442,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -569,7 +481,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
   - name: SELECT
     type: select
     proxies:
@@ -607,7 +518,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
